# protobuf

src/google/protobuf/io/: gzip_stream.h
vsprojects/: CMakeLists.txt  config.h.in  extract_includes.bat  readme.txt  update_file_lists.sh
vsprojects/cmake/: libprotobuf-lite.cmake  libprotobuf.cmake  libprotoc.cmake  protoc.cmake  tests.cmake
